Server-Side checks use JDK17
Replaced JDK21 methods with JDK17 equivalents to see if I can appease Gradle before submission.